# RestAPIs

./: .gitignore  README.md  pyproject.toml
otp/: README.md  main.py
otp/api/: endpoint.py
otp/core/: config.py  redis_client.py
otp/schemas/: otp.py
otp/services/: otp_service.py
security/: config.py  main.py  psswrd_generator.py  psswrd_strength.py  schema.py
smtp/: .env.example  README.md  config.py  connection.py  main.py  service.py  smtp.py
