[project]
name = "restapis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.0.0",
    "fastapi[all]>=0.121.1",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]
